[project]
name = "wm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.12.0",
    "click==8.3.1",
    "gitpython==3.1.45",
    "joblib==1.5.2",
    "lightning==2.6.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pillow==11.3.0",
    "polars==1.36.1",
    "protobuf==4.25.8",
    "psutil==7.1.3",
    "pyarrow==18.0.0",
    "python-dotenv>=0.9.9",  # Đã sửa từ 'dotenv' thành 'python-dotenv'
    "pytorch-lightning==2.6.0",
    "rich>=14.2.0",
    "scikit-learn==1.8.0",
    "scipy==1.16.3",
    "sentence-transformers==5.2.0",
    "sentry-sdk==2.47.0",
    "setuptools==70.2.0",
    "sympy==1.13.1",
    "torch==2.6.0",          # Đã bỏ +cu118 để tương thích PyPI
    "torchaudio==2.6.0",     # Đã bỏ +cu118
    "torchmetrics==1.8.2",
    "torchvision==0.21.0",   # Đã bỏ +cu118
    "transformers>=4.57.3",
    "wandb==0.18.0",
]
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"